<resources>
    <string name="app_name">Challenge</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="refresh">Refresh</string>
    <string name="none">None</string>
    <string name="ok">OK</string>
    <string name="pass">Continue</string>
    <string name="please_wait">Please wait...</string>
    <string name="level_beginner">Beginner (10 categories)</string>
    <string name="level_intermediate">Intermediate (22 categories)</string>
    <string name="level_expert">Expert (52 categories)</string>
    <string name="activity_category_error">Error when getting category</string>
    <string name="activity_category_suggestions_error">Error when getting suggestions</string>
    <string name="category_id">cat_id</string>
    <string name="filter">filter</string>
    <string name="intro">intro</string>
    <string name="level">level</string>
    <string name="display">display</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="title_activity_intro">Introduction</string>
    <string name="checkboxRemember">Do not display anymore</string>
    <string name="intro_title1">WELCOME</string>
    <string name="intro_title2">MAINTAIN</string>
    <string name="intro_title3">SOCIAL</string>
    <string name="intro_content1">to the reading challenge application. Be prepapred to try it !</string>
    <string name="intro_content2">Note all and maintain all of your reading categories.</string>
    <string name="intro_content3">Share with yours friends when you have readen a new category !</string>
    <string name="action_change_display">Change display</string>
    <string name="activity_home_error">Error when getting categories</string>
    <string name="radio_categories">All categories</string>
    <string name="radio_categories_read">Readed categories</string>
    <string name="radio_categories_unread">Unreaded categories</string>
    <string name="loading_title">Loading your categories</string>
    <string name="title_activity_category">Category</string>
    <string name="read">read</string>
    <string name="unread">unread</string>
    <string name="suggestions_title">Suggestions</string>
    <string name="category_read">Category read !</string>
    <string name="category_unread">Category unread !</string>
    <string name="button_add_suggestion">Suggest a book</string>
    <string name="dialog_suggestion_intro">You have an idea which corresponding to this category?</string>
    <string name="dialog_suggestion_error">Error during suggestion</string>
    <string name="dialog_suggestion_success_title">Thanks</string>
    <string name="dialog_suggestion_success">The suggestion will be approved by administrator before publishing.</string>
    <string name="about_application_label">Application</string>
    <string name="about_application">ReadingChallenge</string>
    <string name="about_contact_label">Contact</string>
    <string name="about_contact">readingchallenge.contact@gmail.com</string>
    <string name="about_developer_label">Developer</string>
    <string name="about_developer"><a href="www.pierrefourreau.fr">www.pierrefourreau.fr</a></string>
    <string name="about_more_label">More</string>
    <string name="about_more1">If you like this app, please rate it.</string>
    <string name="about_more2">If you found errors in the app, please report them to me and the app will be updated as soon as possible. Thanks.</string>
    <string name="about_projects_button">Open source licenses</string>
    <string name="donate_label">Want to support us? Want to donate? Thank you.</string>
    <string name="button_donate">Donate</string>
    <string name="action_progress">My progress</string>
    <string name="progress_intro">Here you can see your progress in the challenge</string>
    <string name="progress_number_label1">You have ever read </string>
    <string name="progress_number_label2">of the</string>
    <string name="progress_number_label3">categories of the challenge !</string>
    <string name="settings_display_label">Change number of columns in categories list.</string>
    <string name="dialog_level_content">One by month? Two by month? One by week? Or one when you want! \n\n You will can change after.</string>
    <string name="dialog_level_content1">Beginner : 10 categories</string>
    <string name="dialog_level_content2">Intermediate : 22 categories</string>
    <string name="dialog_level_content3">Expert : 52 categories, 1 by week !</string>
</resources>