<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.fourreau.readingchallenge.activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_level_content" />

        <RadioGroup
            android:id="@+id/radioGroupLevelSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp">

            <RadioButton
                android:id="@+id/settingsLevel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_beginner" />

            <RadioButton
                android:id="@+id/settingsLevel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_intermediate" />

            <RadioButton
                android:id="@+id/settingsLevel3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_expert" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_level_content1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialog_level_content2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/dialog_level_content3" />


        <View style="@style/Divider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_display_label" />

        <RadioGroup
            android:id="@+id/radioGroupDisplaySettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="40dp">

            <RadioButton
                android:id="@+id/settingsDisplay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/settingsDisplay2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2" />

            <RadioButton
                android:id="@+id/settingsDisplay3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3" />
        </RadioGroup>

    </LinearLayout>
</RelativeLayout>
