<tools:LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.fourreau.readingchallenge.activity.AboutActivity">

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingTop="3dp">

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="5dp"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_application_label"
                        android:textSize="@dimen/text_Medium"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_application"
                        android:textSize="@dimen/text_Medium" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_contact_label"
                        android:textSize="@dimen/text_Medium"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_contact"
                        android:textSize="@dimen/text_Medium" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_developer_label"
                        android:textSize="@dimen/text_Medium"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@string/about_developer"
                        android:textSize="@dimen/text_Medium" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_more_label"
                        android:textSize="@dimen/text_Medium"
                        android:textStyle="bold" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_more1"
                        android:textSize="@dimen/text_Medium" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_more2"
                        android:textSize="@dimen/text_Medium" />

                <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/see_projects_open_source_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@color/primary"
                        android:text="@string/about_projects_button"
                        android:textSize="@dimen/text_Medium" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/donate_label"
                        android:textSize="@dimen/text_Medium" />

                <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/button_donate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@color/primary"
                        android:text="@string/button_donate" />

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/privacy_label"
                        android:textSize="@dimen/text_Medium" />

                <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/button_privacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:background="@color/primary"
                        android:text="@string/privacy_label" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</tools:LinearLayout>
